fix: upgrade: 升级jdk11后项目编译问题